# ppx_deriving_omp

./: Makefile  README.md  ppx_deriving_omp.descr  ppx_deriving_omp.opam
src/: jbuild  ppx_deriving_omp.ml
test/: jbuild  ppx_deriving_foo.ml  test.ml
