opam-version: "1.2"
version: "1.0"
maintainer: "jeremie@dimino.org"
authors: ["Jérémie Dimino"]
license: "BSD3"
homepage: "https://github.com/diml/ppx_deriving_omp"
bug-reports: "https://github.com/diml/ppx_deriving_omp/issues"
dev-repo: "git://github.com/diml/ppx_deriving_omp.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {>= "1.0+beta7"}
  "ppx_derivers"
  "ppx_deriving" {>= "4.1" & < "5.0"}
  "ocaml-migrate-parsetree"
]
conflicts: [
  "ppx_type_conv" {< "v0.9.1"}
]
